--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,7 @@
        點擊下方按鈕即可進入首頁。</p>
     
     <!-- 進入首頁按鈕 -->
-    <a href="index.html" class="btn">點我進入首頁</a>
+    <a href="{{ url_for('index') }}" class="btn">點我進入首頁</a>
   </div>
 </body>
 </html>
