--- a/templates/login.html
+++ b/templates/login.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="row">
-          <a href="/" class="btn">返回首頁</a>
+          <a href="{{ url_for('index') }}" class="btn">返回首頁</a>
           <button class="btn btn-primary" type="submit">登入</button>
         </div>
         <div class="links">
