--- a/templates/motivation.html
+++ b/templates/motivation.html
@@ -46,7 +46,8 @@
       本平台將提供模擬惡意流量的 Agent，以及詳細的報告，協助企業即時發現防護弱點並改善，<br>
       避免潛在的資安風險。
     </p>
-    <a href="/" style="color:#0ea5e9;">← 返回首頁</a>
+    <a href="{{ url_for('index') }}" style="color:#0ea5e9;">↩ 返回首頁</a>
+    
   </div>
 </body>
 </html>
