--- a/templates/register.html
+++ b/templates/register.html
@@ -83,7 +83,7 @@
         </div>
 
         <div class="row">
-          <a href="/" class="btn">返回首頁</a>
+          <a href="{{ url_for('index') }}" class="btn">返回首頁</a>
           <button class="btn btn-primary" type="submit">建立帳號</button>
         </div>
         <div class="links">
