--- a/templates/view.html
+++ b/templates/view.html
@@ -88,7 +88,7 @@
       </button>
     </form>
 
-    <a href="{{ url_for('index') }}" style="margin-left:auto;" class="btn">← 返回首頁</a>
+    <a href="{{ url_for('index') }}" style="display:inline-block;margin-top:12px;">← 返回首頁</a>
   </div>
 
   <!-- 事件表格 -->
